--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.26.2",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "morgan": "^1.10.1",
     "motion": "^12.26.2",
     "motion-react": "^0.15.0-alpha.1",
     "react": "^19.2.0",
