--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "framer-motion": "^12.26.2",
     "jsonwebtoken": "^9.0.3",
+    "lottie-react": "^2.4.1",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
     "motion": "^12.26.2",
